# fast_mit_apriltags

./: .clang-format  CMakeLists.txt  README.md
AprilTags/: Edge.h  FloatImage.h  GLine2D.h  GLineSegment2D.h  Gaussian.h  GrayModel.h  Homography33.h  Quad.h  Tag16h5_other.h  Tag16h6.h  TagDetection.h  TagDetector.h  ThreadPool.h  UnionFindSimple.h  XYWeight.h
example/: CMakeLists.txt  apriltags_demo.cpp
include/AprilTags/: FloatImage.h  GLineSegment2D.h  Gridder.h  MathUtil.h  Segment.h  TagDetection.h  TagDetector.h  TagFamily.h
src/: Edge.cc  FloatImage.cc  GLine2D.cc  GLineSegment2D.cc  Gaussian.cc  GrayModel.cc  Homography33.cc  MathUtil.cc  Quad.cc  Segment.cc  TagDetection.cc  TagDetector.cc  TagFamily.cc  UnionFindSimple.cc
